--- a/package.json
+++ b/package.json
@@ -1,46 +1,24 @@
 {
-  "name": "demo-antd-v4",
-  "version": "0.1.0",
+  "name": "demo-antd-v5",
   "private": true,
-  "dependencies": {
-    "@ant-design/icons": "^4.7.0",
-    "@react-buddy/ide-toolbox": "^2.3.0",
-    "@react-buddy/react-scripts": "^1.0.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.27",
-    "@types/react": "^17.0.26",
-    "@types/react-dom": "^17.0.9",
-    "antd": "^4.18.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "typescript": "^4.4.3",
-    "web-vitals": "^1.1.2"
-  },
+  "version": "0.1.0",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "@ant-design/icons": "^5.0.1",
+    "@react-buddy/ide-toolbox": "^2.3.1",
+    "antd": "^5.3.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "@vitejs/plugin-react": "^1.3.0",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.9"
   }
 }
